--- a/src/Antix.EASI.Data.EF/Antix.EASI.Data.EF.csproj
+++ b/src/Antix.EASI.Data.EF/Antix.EASI.Data.EF.csproj
@@ -38,6 +38,9 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="LinqKit">
+      <HintPath>..\packages\LINQKit.1.1.1\lib\net45\LinqKit.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -49,9 +52,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataContext.cs" />
+    <Compile Include="Migrations\201501131659306_init.cs" />
+    <Compile Include="Migrations\201501131659306_init.Designer.cs">
+      <DependentUpon>201501131659306_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="People\Clinicians\AddClinicianDataService.cs" />
+    <Compile Include="People\Clinicians\LookupCliniciansService.cs" />
+    <Compile Include="People\Clinicians\Projections\ClinicianInfoProjection.cs" />
     <Compile Include="People\Patients\AddPatientDataService.cs" />
-    <Compile Include="People\Clinicians\ClinicianMappings.cs" />
+    <Compile Include="People\Clinicians\Models\ClinicianMappings.cs" />
     <Compile Include="People\Clinicians\Models\ClinicianData.cs" />
     <Compile Include="People\Models\PersonData.cs" />
     <Compile Include="People\Patients\PatientMappings.cs" />
@@ -77,6 +87,11 @@
       <Project>{ACB0D648-801C-4457-B5D1-42D9ED62D6C8}</Project>
       <Name>Antix</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201501131659306_init.resx">
+      <DependentUpon>201501131659306_init.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
