--- a/src/Antix.EASI.Web/packages.config
+++ b/src/Antix.EASI.Web/packages.config
@@ -10,6 +10,7 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
+  <package id="FontAwesome" version="4.2.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
