--- a/src/Antix.EASI.Web/Antix.EASI.Web.csproj
+++ b/src/Antix.EASI.Web/Antix.EASI.Web.csproj
@@ -130,6 +130,7 @@
     <Content Include="client\clinicians\clinicians-api.js" />
     <Content Include="client\clinicians\clinicians.js" />
     <Content Include="client\clinicians\create\clinicians-create.js" />
+    <Content Include="client\clinicians\edit\clinicians-edit.js" />
     <Content Include="client\clinicians\select\clinicians-select.js" />
     <Content Include="client\home\home.js" />
     <Content Include="Content\animate.css" />
@@ -1017,6 +1018,7 @@
     <Content Include="Content\site\form.css.map">
       <DependentUpon>form.css</DependentUpon>
     </Content>
+    <Content Include="client\clinicians\edit\clinicians-edit.cshtml" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.3.js" />
     <Content Include="Scripts\jquery-2.1.3.min.js" />
