--- a/src/Antix.EASI.Application/Antix.EASI.Application.csproj
+++ b/src/Antix.EASI.Application/Antix.EASI.Application.csproj
@@ -39,6 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="People\Clinicians\IReadClinicianDataService.cs" />
+    <Compile Include="People\Clinicians\IUpdateClinicianDataService.cs" />
+    <Compile Include="People\Clinicians\ReadClincianService.cs" />
+    <Compile Include="People\Clinicians\UpdateClinicianService.cs" />
     <Compile Include="People\Patients\CreateClinicianService.cs" />
     <Compile Include="People\Patients\IAddClinicianDataService.cs" />
     <Compile Include="People\Clinicians\CreateClinicianService.cs" />
