--- a/src/Antix/packages.config
+++ b/src/Antix/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="antix.code" version="7.0.0-b103" targetFramework="net45" />
-  <package id="Antix.Data.code" version="7.0.0-b103" targetFramework="net45" />
-  <package id="Antix.Http.code" version="7.0.0-b103" targetFramework="net45" />
-  <package id="antix.services.code" version="7.0.0-b103" targetFramework="net45" />
+  <package id="antix.code" version="7.0.0-b104" targetFramework="net45" />
+  <package id="antix.data.code" version="7.0.0-b104" targetFramework="net45" />
+  <package id="antix.http.code" version="7.0.0-b104" targetFramework="net45" />
+  <package id="antix.services.code" version="7.0.0-b104" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
