--- a/src/Antix.EASI.Application/Antix.EASI.Application.csproj
+++ b/src/Antix.EASI.Application/Antix.EASI.Application.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="People\Clinicians\DeleteClinicianService.cs" />
+    <Compile Include="People\Clinicians\IDeleteClinicianDataService.cs" />
     <Compile Include="People\Clinicians\IReadClinicianDataService.cs" />
     <Compile Include="People\Clinicians\IUpdateClinicianDataService.cs" />
     <Compile Include="People\Clinicians\ReadClincianService.cs" />
@@ -46,7 +48,7 @@
     <Compile Include="People\Patients\CreateClinicianService.cs" />
     <Compile Include="People\Patients\IAddClinicianDataService.cs" />
     <Compile Include="People\Clinicians\CreateClinicianService.cs" />
-    <Compile Include="People\Clinicians\IAddClinicianDataService.cs" />
+    <Compile Include="People\Clinicians\ICreateClinicianDataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
