--- a/src/Antix.EASI.Web/Antix.EASI.Web.csproj
+++ b/src/Antix.EASI.Web/Antix.EASI.Web.csproj
@@ -131,6 +131,16 @@
     <Content Include="client\clinicians\clinicians.js" />
     <Content Include="client\clinicians\create\clinicians-create.js" />
     <Content Include="client\clinicians\edit\clinicians-edit.js" />
+    <Content Include="client\clinicians\index\clinicians-index.js" />
+    <None Include="client\clinicians\list\clinicians-list-item.cshtml" />
+    <Content Include="client\clinicians\list\clinicians-list-directive.js" />
+    <None Include="client\clinicians\list\clinicians-list.cshtml" />
+    <Content Include="client\clinicians\list\clinicians-list.css">
+      <DependentUpon>clinicians-list.less</DependentUpon>
+    </Content>
+    <Content Include="client\clinicians\list\clinicians-list.min.css">
+      <DependentUpon>clinicians-list.css</DependentUpon>
+    </Content>
     <Content Include="client\clinicians\select\clinicians-select.js" />
     <Content Include="client\home\home.js" />
     <Content Include="Content\animate.css" />
@@ -149,6 +159,12 @@
     </Content>
     <Content Include="Content\site\layout.min.css">
       <DependentUpon>layout.css</DependentUpon>
+    </Content>
+    <Content Include="Content\site\panel-buttons.css">
+      <DependentUpon>panel-buttons.less</DependentUpon>
+    </Content>
+    <Content Include="Content\site\panel-buttons.min.css">
+      <DependentUpon>panel-buttons.css</DependentUpon>
     </Content>
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="Global.asax" />
@@ -176,6 +192,11 @@
     <Content Include="Scripts\angular-touch.min.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
+    <Content Include="Scripts\antix\cell-layout\cell-layout-icon-32x32.png" />
+    <Content Include="Scripts\antix\cell-layout\cell-layout-icon.png" />
+    <Content Include="Scripts\antix\cell-layout\cell-layout.css" />
+    <Content Include="Scripts\antix\cell-layout\cell-layout.js" />
+    <Content Include="Scripts\antix\cell-layout\cell-layout.min.css" />
     <Content Include="Scripts\antix\form\confirm\antix-form-confirm.html" />
     <Content Include="Scripts\antix\form\confirm\antix-form-confirm.js" />
     <Content Include="Scripts\antix\status\antix-status.css" />
@@ -1021,7 +1042,19 @@
       <DependentUpon>form.css</DependentUpon>
     </Content>
     <Content Include="client\clinicians\edit\clinicians-edit.cshtml" />
+    <Content Include="client\clinicians\index\clinicians-index.cshtml" />
+    <Content Include="client\clinicians\list\clinicians-list.less" />
+    <Content Include="client\clinicians\list\clinicians-list.css.map">
+      <DependentUpon>clinicians-list.css</DependentUpon>
+    </Content>
+    <Content Include="Content\site\panel-buttons.less" />
+    <Content Include="Content\site\panel-buttons.css.map">
+      <DependentUpon>panel-buttons.css</DependentUpon>
+    </Content>
     <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
+    <Content Include="Scripts\antix\cell-layout\readme.md" />
+    <Content Include="Scripts\antix\cell-layout\cell-layout.less" />
+    <Content Include="Scripts\antix\cell-layout\cell-layout.css.map" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.3.js" />
     <Content Include="Scripts\jquery-2.1.3.min.js" />
