--- a/src/Antix.EASI.Web/packages.config
+++ b/src/Antix.EASI.Web/packages.config
@@ -5,6 +5,7 @@
   <package id="Angular.UI.Utils" version="0.2.1" targetFramework="net45" />
   <package id="angularjs" version="1.3.8" targetFramework="net45" />
   <package id="animate.css" version="3.2.0.0" targetFramework="net45" />
+  <package id="antix.cellLayout.angularjs" version="7.0.0-b105" targetFramework="net45" />
   <package id="Antix.Status.angularjs" version="1.0.1-b426" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
