--- a/src/Antix.EASI.Web/Antix.EASI.Web.csproj
+++ b/src/Antix.EASI.Web/Antix.EASI.Web.csproj
@@ -198,6 +198,14 @@
     <Content Include="Scripts\antix\cell-layout\cell-layout.css" />
     <Content Include="Scripts\antix\cell-layout\cell-layout.js" />
     <Content Include="Scripts\antix\cell-layout\cell-layout.min.css" />
+    <Content Include="Scripts\antix\form\antix-form.js" />
+    <Content Include="Scripts\antix\form\clear-button\antix-form-clear-button.css">
+      <DependentUpon>antix-form-clear-button.less</DependentUpon>
+    </Content>
+    <Content Include="Scripts\antix\form\clear-button\antix-form-clear-button.js" />
+    <Content Include="Scripts\antix\form\clear-button\antix-form-clear-button.min.css">
+      <DependentUpon>antix-form-clear-button.css</DependentUpon>
+    </Content>
     <Content Include="Scripts\antix\form\confirm\antix-form-confirm.html" />
     <Content Include="Scripts\antix\form\confirm\antix-form-confirm.js" />
     <Content Include="Scripts\antix\status\antix-status.css" />
@@ -1057,6 +1065,10 @@
     <Content Include="Scripts\antix\cell-layout\readme.md" />
     <Content Include="Scripts\antix\cell-layout\cell-layout.less" />
     <Content Include="Scripts\antix\cell-layout\cell-layout.css.map" />
+    <Content Include="Scripts\antix\form\clear-button\antix-form-clear-button.less" />
+    <Content Include="Scripts\antix\form\clear-button\antix-form-clear-button.css.map">
+      <DependentUpon>antix-form-clear-button.css</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.3.js" />
     <Content Include="Scripts\jquery-2.1.3.min.js" />
