--- a/src/Antix.EASI.Api/Antix.EASI.Api.csproj
+++ b/src/Antix.EASI.Api/Antix.EASI.Api.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="ApiRoutes.cs" />
     <Compile Include="People\Clinicians\CliniciansController.cs" />
+    <Compile Include="People\Clinicians\CliniciansListController.cs" />
     <Compile Include="People\Clinicians\Models\Clinician.cs" />
     <Compile Include="People\Clinicians\Models\ClinicianInfo.cs" />
     <Compile Include="People\Clinicians\Models\CliniciansMapper.cs" />
