--- a/src/Antix/packages.config
+++ b/src/Antix/packages.config
@@ -2,8 +2,11 @@
 <packages>
   <package id="antix.code" version="7.0.0-b105" targetFramework="net45" />
   <package id="antix.data.code" version="7.0.0-b105" targetFramework="net45" />
+  <package id="Antix.Data.Keywords.code" version="7.0.0-b105" targetFramework="net45" />
+  <package id="Antix.Data.Keywords.EF.code" version="7.0.0-b105" targetFramework="net45" />
   <package id="antix.http.code" version="7.0.0-b105" targetFramework="net45" />
   <package id="antix.services.code" version="7.0.0-b105" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
