--- a/src/Antix.EASI.Data.EF/Antix.EASI.Data.EF.csproj
+++ b/src/Antix.EASI.Data.EF/Antix.EASI.Data.EF.csproj
@@ -52,22 +52,31 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataContext.cs" />
-    <Compile Include="Migrations\201501202010066_init.cs" />
-    <Compile Include="Migrations\201501202010066_init.Designer.cs">
-      <DependentUpon>201501202010066_init.cs</DependentUpon>
+    <Compile Include="Migrations\201501202033142_init.cs" />
+    <Compile Include="Migrations\201501202033142_init.Designer.cs">
+      <DependentUpon>201501202033142_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="People\Examiners\CreateExaminerDataService.cs" />
     <Compile Include="People\Examiners\DeleteExaminerDataService.cs" />
     <Compile Include="People\Examiners\LookupExaminersService.cs" />
+    <Compile Include="People\Examiners\Models\ExaminerData.cs" />
+    <Compile Include="People\Examiners\Models\ExaminerMappings.cs" />
     <Compile Include="People\Examiners\Projections\ExaminerInfoProjection.cs" />
     <Compile Include="People\Examiners\Projections\ExaminerProjection.cs" />
     <Compile Include="People\Examiners\ReadExaminerDataService.cs" />
     <Compile Include="People\Examiners\UpdateExaminerDataService.cs" />
     <Compile Include="People\Models\PersonMappings.cs" />
-    <Compile Include="People\Examiners\Models\ExaminerMappings.cs" />
-    <Compile Include="People\Examiners\Models\ExaminerData.cs" />
     <Compile Include="People\Models\PersonData.cs" />
+    <Compile Include="People\Patients\CreatePatientDataService.cs" />
+    <Compile Include="People\Patients\DeletePatientDataService.cs" />
+    <Compile Include="People\Patients\LookupPatientsService.cs" />
+    <Compile Include="People\Patients\Models\PatientData.cs" />
+    <Compile Include="People\Patients\Models\PatientMappings.cs" />
+    <Compile Include="People\Patients\Projections\PatientInfoProjection.cs" />
+    <Compile Include="People\Patients\Projections\PatientProjection.cs" />
+    <Compile Include="People\Patients\ReadPatientDataService.cs" />
+    <Compile Include="People\Patients\UpdatePatientDataService.cs" />
     <Compile Include="People\Projections\PersonProjection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scores\Models\ScoreData.cs" />
@@ -92,8 +101,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201501202010066_init.resx">
-      <DependentUpon>201501202010066_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201501202033142_init.resx">
+      <DependentUpon>201501202033142_init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
