--- a/src/Antix.EASI.Domain/Antix.EASI.Domain.csproj
+++ b/src/Antix.EASI.Domain/Antix.EASI.Domain.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Examinations\Models\CreateExaminationModel.cs" />
+    <Compile Include="Examinations\Validation\CreateExaminationValidator.cs" />
+    <Compile Include="Examinations\Validation\ICreatePatientValidator.cs" />
     <Compile Include="People\Examiners\ICreateExaminerService.cs" />
     <Compile Include="People\Examiners\IDeleteExaminerService.cs" />
     <Compile Include="People\Examiners\ILookupExaminersService.cs" />
@@ -52,6 +55,7 @@
     <Compile Include="People\Examiners\Validation\CreateExaminerValidator.cs" />
     <Compile Include="People\Examiners\Validation\ICreateExaminerValidator.cs" />
     <Compile Include="People\Examiners\Validation\IUpdateExaminerValidator.cs" />
+    <Compile Include="People\Examiners\Validation\Predicates\IExaminerExistsPredicate.cs" />
     <Compile Include="People\Examiners\Validation\UpdateExaminerValidator.cs" />
     <Compile Include="People\Patients\ICreatePatientService.cs" />
     <Compile Include="People\Patients\IDeletePatientService.cs" />
@@ -66,6 +70,7 @@
     <Compile Include="People\Patients\Validation\CreatePatientValidator.cs" />
     <Compile Include="People\Patients\Validation\ICreatePatientValidator.cs" />
     <Compile Include="People\Patients\Validation\IUpdatePatientValidator.cs" />
+    <Compile Include="People\Patients\Validation\Predicates\IPatientExistsPredicate.cs" />
     <Compile Include="People\Patients\Validation\UpdatePatientValidator.cs" />
     <Compile Include="People\Validation\IUpdatePersonValidator.cs" />
     <Compile Include="People\Models\UpdatePersonModel.cs" />
@@ -76,8 +81,6 @@
     <Compile Include="People\Models\Genders.cs" />
     <Compile Include="People\Models\PersonModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scores\Models\ScoreModel.cs" />
-    <Compile Include="Scores\Models\ScoreRegionModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Antix\Antix.csproj">
